<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/pastel_green">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.cardview.widget.CardView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                app:cardCornerRadius="150dp"
                android:layout_marginTop="10dp"
                >
                <ImageView
                    android:layout_width="100dp"
                    android:layout_height="60dp"
                    android:src="@drawable/restaurant"
                    />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome_to_the_n_eat_spot"
                android:textStyle="italic|bold"
                android:textSize="16sp"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="15dp"
                />
        </LinearLayout>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:cardCornerRadius="50dp"
            android:elevation="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:layout_marginTop="15dp"
                        >

                        <com.google.android.material.textfield.TextInputEditText
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:id="@+id/etSearch"
                            android:background="@color/pastel_green"
                            android:hint="@string/enter_rating_to_add_filter"/>
                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/search"
                        android:id="@+id/btnSearch"
                        android:backgroundTint="@color/pastel_green"
                        android:textColor="@color/black"
                        android:layout_marginTop="15dp"
                        android:layout_marginStart="15dp"
                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/to_add_more_restaurants_click"
                        android:textStyle="bold|italic"
                        android:id="@+id/tvAdd"
                        android:layout_marginStart="25dp"
                        android:layout_marginBottom="5dp"
                        />
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add"
                        android:id="@+id/btnAdd"
                        android:layout_marginStart="25dp"
                        android:backgroundTint="@color/pastel_green"
                        android:textColor="@color/black"/>

                </LinearLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@android:color/darker_gray"
                    android:layout_marginTop="2dp"/>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            app:cardCornerRadius="50dp"
            android:elevation="50dp"
            >
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/rvList"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"/>
        </androidx.cardview.widget.CardView>

    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>