<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="50dp"
        tools:ignore="MissingConstraints"
        app:cardCornerRadius="30dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@color/pastel_green"
            >
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="0dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:id="@+id/viewItem"
                >
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="35dp">
                    <ImageView
                        android:id="@+id/ivImage"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/restaurant"
                         />
                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginStart="20dp"
                    >

                    <TextView
                        android:id="@+id/tvName"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:textSize="16sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:text="@string/restaurant_name"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/category"
                        android:textColor="@color/black"
                        android:textStyle="italic"
                        android:textSize="12sp"
                        android:gravity="center"
                        android:id="@+id/tvSubItem"/>


                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/location"
                        android:layout_gravity="right"
                        android:layout_marginRight="10dp"
                        tools:ignore="RtlHardcoded" />
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/location"
                        android:id="@+id/tvLocation"
                        android:textSize="12sp"
                        android:textColor="@color/black"
                        android:gravity="right"
                        tools:ignore="RtlHardcoded" />
                </LinearLayout>


            </LinearLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@android:color/darker_gray"
                android:layout_marginTop="5dp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>